// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio demo -- group 1`] = `
.c12 {
  vertical-align: baseline;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9:hover {
  color: #0a1633;
}

.c9:hover .c10 {
  color: #3357df;
}

.c24 .c10 {
  color: #c3cad9;
}

.c24 .c10 {
  color: #cccccc;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13 .c10 {
  color: #3860f4;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

.c7 .c26 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c26:last-child {
  margin-right: 0;
}

.c7 .c27+.c27 {
  margin-left: -1px;
}

.c7 .c25 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c25:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c25:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3357df;
}

.c14:hover .c20 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c14 .c20 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            default
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            button
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            tag
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            card
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            text
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            1
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            2
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            3
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c7"
    >
      <div
        class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
      >
        <i
          class="uc-fe-icon icon__cbox c10 c11 c12"
        />
        1
      </div>
      <div
        class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
      >
        <i
          class="uc-fe-icon icon__cbox c10 c11 c12"
        />
        2
      </div>
      <div
        class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
      >
        <i
          class="uc-fe-icon icon__cbox c10 c11 c12"
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-disabled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c2 .c3 {
  color: #c3cad9;
}

.c2:hover {
  color: #0a1633;
}

.c2:hover .c3 {
  color: #3357df;
}

.c6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #cccccc;
  cursor: not-allowed;
}

.c6 .c3 {
  color: #c3cad9;
}

.c6 .c3 {
  color: #cccccc;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c8 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c8:last-child {
  margin-right: 0;
}

.c0 .c9+.c9 {
  margin-left: -1px;
}

.c0 .c7 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c7:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c7:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        1
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        2
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c6"
        disabled=""
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
          disabled=""
        />
        1
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c6"
        disabled=""
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
          disabled=""
        />
        2
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c6"
        disabled=""
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
          disabled=""
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-options 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c2 .c3 {
  color: #c3cad9;
}

.c2:hover {
  color: #0a1633;
}

.c2:hover .c3 {
  color: #3357df;
}

.c6 .c3 {
  color: #c3cad9;
}

.c6 .c3 {
  color: #cccccc;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c8 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c8:last-child {
  margin-right: 0;
}

.c0 .c9+.c9 {
  margin-left: -1px;
}

.c0 .c7 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c7:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c7:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        option-1
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        option-2
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        option-3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        radio-1
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        radio-2
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        radio-3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-size 1`] = `
.c3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c3:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c5:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 11px;
  padding-right: 11px;
}

.c7:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c2.c2 {
  min-width: 56px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c2.c2:hover {
  z-index: 3;
}

.c4.c4 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c4.c4:hover {
  z-index: 3;
}

.c6.c6 {
  min-width: 80px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c6.c6:hover {
  z-index: 3;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c8,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c8:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c9 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c9:last-child {
  margin-right: 0;
}

.c0 .c10+.c10 {
  margin-left: -1px;
}

.c0 .c1 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c1:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c1:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-button c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c3"
        type="button"
      >
        1
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-button c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c3"
        type="button"
      >
        2
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-button c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c3"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c5"
        type="button"
      >
        1
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c5"
        type="button"
      >
        2
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c5"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-button c6 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border-gray c7"
        type="button"
      >
        1
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-button c6 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border-gray c7"
        type="button"
      >
        2
      </button>
      <button
        class="c1 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-button c6 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border-gray c7"
        type="button"
      >
        3
      </button>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-styleType 1`] = `
.c5 {
  vertical-align: baseline;
}

.c8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c8:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c2 .c3 {
  color: #c3cad9;
}

.c2:hover {
  color: #0a1633;
}

.c2:hover .c3 {
  color: #3357df;
}

.c18 .c3 {
  color: #c3cad9;
}

.c18 .c3 {
  color: #cccccc;
}

.c7.c7 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c7.c7:hover {
  z-index: 3;
}

.c10 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c10:hover {
  color: #3860f4;
}

.c17 {
  position: relative;
  padding: 8px 16px;
  line-height: 22px;
  min-height: 22px;
  font-weight: bold;
}

.c13 {
  padding: 16px;
  min-height: 20px;
}

.c12 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #d2d6ea;
  background: #ffffff;
}

.c12 .c19 {
  color: #c3cad9;
}

.c12 .c16 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c12:hover {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
  border-color: transparent;
}

.c12:hover .c19 {
  color: #3357df;
}

.c15 {
  padding: 2px 0;
  box-sizing: border-box;
  cursor: pointer;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  line-height: normal;
  color: #0a1633;
}

.c15 > span {
  display: table;
  height: 100%;
}

.c15 > span > span {
  padding: 0 12px;
  border-color: #d2d6ea;
  border-style: solid;
  border-width: 0 1px;
  height: 100%;
  display: table-cell;
  vertical-align: middle;
}

.c15:hover {
  color: #3860f4;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .c9 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .c9:last-child {
  margin-right: 0;
}

.c0 .c11 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c11:last-child {
  margin-right: 0;
}

.c0 .c14+.c14 {
  margin-left: -1px;
}

.c0 .c6 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c6:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c6:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        1
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        2
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c6 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c7 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c8"
        type="button"
      >
        1
      </button>
      <button
        class="c6 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c7 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c8"
        type="button"
      >
        2
      </button>
      <button
        class="c6 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c7 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c8"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c10"
      >
        1
      </div>
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c10"
      >
        2
      </div>
      <div
        class="c9 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c10"
      >
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c11 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c12"
      >
        <div
          class="c13"
        >
          1
        </div>
      </div>
      <div
        class="c11 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c12"
      >
        <div
          class="c13"
        >
          2
        </div>
      </div>
      <div
        class="c11 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c12"
      >
        <div
          class="c13"
        >
          3
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c14 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c15"
      >
        <span>
          <span>
            1
          </span>
        </span>
      </div>
      <div
        class="c14 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c15"
      >
        <span>
          <span>
            2
          </span>
        </span>
      </div>
      <div
        class="c14 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c15"
      >
        <span>
          <span>
            3
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c11 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c12"
      >
        <div
          class="c16 c17"
        >
          card
        </div>
        <div
          class="c13"
        >
          1
        </div>
      </div>
      <div
        class="c11 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c12"
      >
        <div
          class="c16 c17"
        >
          card
        </div>
        <div
          class="c13"
        >
          2
        </div>
      </div>
      <div
        class="c11 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c12"
      >
        <div
          class="c16 c17"
        >
          card
        </div>
        <div
          class="c13"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-uncontrolled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c2 .c3 {
  color: #c3cad9;
}

.c2:hover {
  color: #0a1633;
}

.c2:hover .c3 {
  color: #3357df;
}

.c7 .c3 {
  color: #c3cad9;
}

.c7 .c3 {
  color: #cccccc;
}

.c6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c6 .c3 {
  color: #c3cad9;
}

.c6 .c3 {
  color: #3860f4;
}

.c0 {
  position: relative;
  margin-bottom: -8px;
}

.c0 .c1,
.c0 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c0 .c1:last-child,
.c0 .sc-htpNat:last-child {
  margin-right: 0;
}

.c0 .c9 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c0 .c9:last-child {
  margin-right: 0;
}

.c0 .c10+.c10 {
  margin-left: -1px;
}

.c0 .c8 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c0 .c8:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c8:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        1
      </div>
      <div
        checked=""
        class="c1 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c6"
      >
        <i
          class="uc-fe-icon icon__cbox-ed c3 c4 c5"
        />
        2
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        1
      </div>
      <div
        checked=""
        class="c1 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c6"
      >
        <i
          class="uc-fe-icon icon__cbox-ed c3 c4 c5"
        />
        2
      </div>
      <div
        class="c1 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c2"
      >
        <i
          class="uc-fe-icon icon__cbox c3 c4 c5"
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio 1`] = `
.c12 {
  vertical-align: baseline;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9:hover {
  color: #0a1633;
}

.c9:hover .c10 {
  color: #3357df;
}

.c24 .c10 {
  color: #c3cad9;
}

.c24 .c10 {
  color: #cccccc;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13 .c10 {
  color: #3860f4;
}

.c25 .c10 {
  color: #c3cad9;
}

.c25:hover .c10 {
  color: #3357df;
}

.c26 .c10 {
  color: #c3cad9;
}

.c26:hover .c10 {
  color: #3357df;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

.c7 .c28 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c28:last-child {
  margin-right: 0;
}

.c7 .c29+.c29 {
  margin-left: -1px;
}

.c7 .c27 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c27:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c27:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3357df;
}

.c14:hover .c20 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c14 .c20 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            default
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            button
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            tag
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            card
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            text
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
    >
      <i
        class="uc-fe-icon icon__cbox c10 c11 c12"
      />
      checked
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-checked 1`] = `
.c4 {
  vertical-align: baseline;
}

.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c1 .c2 {
  color: #c3cad9;
}

.c1:hover {
  color: #0a1633;
}

.c1:hover .c2 {
  color: #3357df;
}

.c6 .c2 {
  color: #c3cad9;
}

.c6 .c2 {
  color: #cccccc;
}

.c5 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c5 .c2 {
  color: #c3cad9;
}

.c5 .c2 {
  color: #3860f4;
}

.c7 .c0,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c0:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <i
        class="uc-fe-icon icon__cbox c2 c3 c4"
      />
      common
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c5"
    >
      <i
        class="uc-fe-icon icon__cbox-ed c2 c3 c4"
      />
      checked
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-disabled 1`] = `
.c4 {
  vertical-align: baseline;
}

.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c1 .c2 {
  color: #c3cad9;
}

.c1:hover {
  color: #0a1633;
}

.c1:hover .c2 {
  color: #3357df;
}

.c5 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #cccccc;
  cursor: not-allowed;
}

.c5 .c2 {
  color: #c3cad9;
}

.c5 .c2 {
  color: #cccccc;
}

.c6 .c2 {
  color: #c3cad9;
}

.c6 .c2 {
  color: #3860f4;
}

.c7 .c0,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c0:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <i
        class="uc-fe-icon icon__cbox c2 c3 c4"
      />
      common
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-default c5"
      disabled=""
    >
      <i
        class="uc-fe-icon icon__cbox c2 c3 c4"
        disabled=""
      />
      disabled
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-size 1`] = `
.c4 {
  vertical-align: baseline;
}

.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c5 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c5 .c2 {
  color: #c3cad9;
}

.c5:hover {
  color: #0a1633;
}

.c5:hover .c2 {
  color: #3357df;
}

.c7 .c2 {
  color: #c3cad9;
}

.c7 .c2 {
  color: #cccccc;
}

.c8 .c2 {
  color: #c3cad9;
}

.c8 .c2 {
  color: #3860f4;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
}

.c1 .c2 {
  color: #c3cad9;
}

.c1:hover {
  color: #0a1633;
}

.c1:hover .c2 {
  color: #3357df;
}

.c6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  line-height: 32px;
}

.c6 .c2 {
  color: #c3cad9;
}

.c6:hover {
  color: #0a1633;
}

.c6:hover .c2 {
  color: #3357df;
}

.c9 .c0,
.c9 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c9 .c0:last-child,
.c9 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-radio uc-fe-radio-size-sm uc-fe-radio-styletype-default c1"
    >
      <i
        class="uc-fe-icon icon__cbox c2 c3 c4"
      />
      sm
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c5"
    >
      <i
        class="uc-fe-icon icon__cbox c2 c3 c4"
      />
      md
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-radio uc-fe-radio-size-lg uc-fe-radio-styletype-default c6"
    >
      <i
        class="uc-fe-icon icon__cbox c2 c3 c4"
      />
      lg
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-styleType 1`] = `
.c4 {
  vertical-align: baseline;
}

.c7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c7:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c1 .c2 {
  color: #c3cad9;
}

.c1:hover {
  color: #0a1633;
}

.c1:hover .c2 {
  color: #3357df;
}

.c17 .c2 {
  color: #c3cad9;
}

.c17 .c2 {
  color: #cccccc;
}

.c18 .c2 {
  color: #c3cad9;
}

.c18 .c2 {
  color: #3860f4;
}

.c19 .c2 {
  color: #c3cad9;
}

.c19:hover .c2 {
  color: #3357df;
}

.c20 .c2 {
  color: #c3cad9;
}

.c20:hover .c2 {
  color: #3357df;
}

.c6.c6 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c6.c6:hover {
  z-index: 3;
}

.c9 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9:hover {
  color: #3860f4;
}

.c16 {
  position: relative;
  padding: 8px 16px;
  line-height: 22px;
  min-height: 22px;
  font-weight: bold;
}

.c12 {
  padding: 16px;
  min-height: 20px;
}

.c11 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #d2d6ea;
  background: #ffffff;
}

.c11 .c22 {
  color: #c3cad9;
}

.c11 .c15 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c11:hover {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
  border-color: transparent;
}

.c11:hover .c22 {
  color: #3357df;
}

.c14 {
  padding: 2px 0;
  box-sizing: border-box;
  cursor: pointer;
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  line-height: normal;
  color: #0a1633;
}

.c14 > span {
  display: table;
  height: 100%;
}

.c14 > span > span {
  padding: 0 12px;
  border-color: #d2d6ea;
  border-style: solid;
  border-width: 0 1px;
  height: 100%;
  display: table-cell;
  vertical-align: middle;
}

.c14:hover {
  color: #3860f4;
}

.c21 .c0,
.c21 .c8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c21 .c0:last-child,
.c21 .c8:last-child {
  margin-right: 0;
}

.c21 .c10 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c21 .c10:last-child {
  margin-right: 0;
}

.c21 .c13+.c13 {
  margin-left: -1px;
}

.c21 .c5 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c21 .c5:first-child {
  border-radius: 2px 0 0 2px;
}

.c21 .c5:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <i
        class="uc-fe-icon icon__cbox c2 c3 c4"
      />
      default
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="c5 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c6 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c7"
      type="button"
    >
      button
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-tag c9"
    >
      tag
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c11"
    >
      <div
        class="c12"
      >
        card
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c13 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-text c14"
    >
      <span>
        <span>
          text
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-card c11"
    >
      <div
        class="c15 c16"
      >
        card
      </div>
      <div
        class="c12"
      />
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-uncontrolled 1`] = `
.c4 {
  vertical-align: baseline;
}

.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c5 .c2 {
  color: #c3cad9;
}

.c5:hover .c2 {
  color: #3357df;
}

.c6 .c2 {
  color: #c3cad9;
}

.c6 .c2 {
  color: #cccccc;
}

.c1 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c1 .c2 {
  color: #c3cad9;
}

.c1 .c2 {
  color: #3860f4;
}

.c7 .c2 {
  color: #c3cad9;
}

.c7:hover .c2 {
  color: #3357df;
}

.c8 .c2 {
  color: #c3cad9;
}

.c8:hover .c2 {
  color: #3357df;
}

.c9 .c0,
.c9 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c9 .c0:last-child,
.c9 .sc-htpNat:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <i
        class="uc-fe-icon icon__cbox-ed c2 c3 c4"
      />
      controlled
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c1"
    >
      <i
        class="uc-fe-icon icon__cbox-ed c2 c3 c4"
      />
      uncontrolled
    </div>
  </div>
</div>
`;
